--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-android": "8.1.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-media-capture": "^3.0.3",
     "core-js": "^2.5.4",
     "firebase": "^7.2.1",
     "ionic-angular": "^3.9.9",
@@ -76,7 +78,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-media-capture": {}
     },
     "platforms": [
       "android"
