--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-android": "8.1.0",
+    "cordova-ios": "5.0.1",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-media-capture": "^3.0.3",
     "cordova-plugin-speechrecognition": "^1.2.0",
@@ -85,7 +86,8 @@
       "cordova-plugin-speechrecognition": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
